# IA_nutricionista_telegram

./: README.md  pyproject.toml
docs/: database_diagram.md
nutritionist/: app.py  settings.py
nutritionist/agents/: nutritionist.py
nutritionist/chat/: memory.py  telegram.py
nutritionist/database/: engine.py
nutritionist/models/: __init__.py  diet_plan.py  meal_entry.py  report.py  user.py  weight_history.py
nutritionist/repositories/: __init__.py  base_repository.py  diet_plan.py  meal_entry.py  report.py  user.py  weight_history.py
nutritionist/tools/: __init__.py  diet_plain_tool.py  food_analyser_tool.py  meal_entry_tool.py  report_tool.py  user_info_tool.py  user_registration_tool.py  weight_update_tool.py
