[project]
name = "ia-nutricionista"
version = "0.1.0"
description = ""
authors = [
    {name = "Diego Ribeiro", email = "diegosribeiro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.0,<0.4.0",
    "langchainhub>=0.1.21,<0.2.0",
    "langgraph>=0.2.21,<0.3.0",
    "sqlalchemy>=2.0.34,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "openai>=1.47.0,<2.0.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "python-telegram-bot>=21.6,<22.0",
    "pyrogram>=2.0.106,<3.0.0",
    "tgcrypto>=1.2.5,<2.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "langchain>=0.3.1,<0.4.0",
    "langchain-core>=0.3.7,<0.4.0",
    "pillow>=10.4.0,<11.0.0",
    "tinydb>=4.8.0,<5.0.0",
    "pydantic>=2.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nutritionist"]
